--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 
 
 
-
 *{
     font-family: 'Raleway' , sans-serif;
     font-style: normal;
@@ -65,7 +64,7 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     position: relative;
-    bottom: 200px;
+    bottom: 500px;
     left: 900px;
 }
 
@@ -88,7 +87,7 @@
     margin-bottom: 20px;
     position: relative;
     left: 900px;/* ------------------------------ left: 900px; ------------------------------ */
-    bottom: 200px;
+    bottom: 500px;
 }
 
 .checkout #cancel{
@@ -167,9 +166,43 @@
     position: relative;
     top: 100px;
     background-color: white;
-    right: 180px;
-    font-size: 20px;
+    right: 150px;
+    font-size: 18px;
 }
+
+
+.price{
+        position: relative;
+        top: 100px;
+        background-color: white;
+        right: 50px;
+        font-size: 18px;
+}
+
+
+.food2{
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    left: 27rem;
+    bottom: 185px;
+    border-radius: 20px;
+}
+
+
+.food2 button{
+    background-color: #31A831;
+    padding: 9px 11px;
+    border: none;
+    margin-bottom: 10px;
+    color: white;
+    justify-content: end;
+}
+
+
+
+
 
 
 
