--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     position: relative;
-    bottom: 800px;
+    bottom: 1700px;
     left: 900px;
 }
 
@@ -87,7 +87,7 @@
     margin-bottom: 20px;
     position: relative;
     left: 900px;/* ------------------------------ left: 900px; ------------------------------ */
-    bottom: 800px;
+    bottom: 1700px;
 }
 
 .checkout #cancel{
@@ -248,6 +248,72 @@
     color: white;
     justify-content: end;
 }
+
+
+.food4{
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    left: 27rem;
+    bottom: 350px;
+    border-radius: 20px;
+}
+
+
+.food4 button{
+    background-color: #31A831;
+    padding: 9px 11px;
+    border: none;
+    margin-bottom: 10px;
+    color: white;
+    justify-content: end;
+}
+
+
+
+.food5{
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    left: 2rem;
+    bottom: 170px;
+    border-radius: 20px;
+}
+
+
+.food5 button{
+    background-color: #31A831;
+    padding: 9px 11px;
+    border: none;
+    margin-bottom: 10px;
+    color: white;
+    justify-content: end;
+}
+
+
+
+.food6{
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    left: 27rem;
+    bottom: 470px;
+    border-radius: 20px;
+}
+
+
+.food6 button{
+    background-color: #31A831;
+    padding: 9px 11px;
+    border: none;
+    margin-bottom: 10px;
+    color: white;
+    justify-content: end;
+}
+
 
 
 
